pages.css is linked, images are linked

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="decsription" content="Квентин Тарантино и его фильмы">
   <meta name="keywords" content="Тарантино, фильмы, кино">
   <meta name="author" content="Шишлов Игорь">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
